tests/snapshots/integration__integration_tests__remove__remove_internal_mode.snap
---
source: tests/integration_tests/remove.rs
info:
  program: wt
  args:
    - "--internal"
    - remove
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
cd '[REPO]'

----- stderr -----
🔄 [36m[36mRemoving [1mfeature-internal[22m worktree & branch in background (no marginal contribution to main)[39m[39m
